src/assets/css/welcome.css
/* ... */
@media only screen and (max-width: 894px){
  .mhacks-top-header{
    font-size: 2.2em;
  }

  .mhacks-top-para{
    font-size: 1em;
  }

  .mhacks-top-btn{
    font-size: 1em;
    height: 45px;
    width: 140px;
  }

  .mhacks-register-btn{
    font-size: 1em;
    height: 40px;
    padding: 0px;
  }

  .mhacks-top-bg{
    height: 400px;
  }

  .mhacks-tn-left-logo{
    font-size: 0.9em;
  }

  .mhacks-tn-right-item{
    font-size: 0.9em;
    margin-left: -12vw;
    margin-right: 12vw;
  }

  .mhacks-mid-header, .mhacks-mid-header-business{
    font-size: 2.3em;
  }

  .mhacks-mid-bg, .mhacks-mid-bg-business{
    height: 110px;
  }

  .mhacks-mid-content, .mhacks-mid-content-business{
    font-size: 1.1em;
    margin-top: 12%;
  }

  .mhacks-mid-content-pic{
    height: 260px;
  }

  .mhacks-mid-ft-list-name{
    font-size: 1em;
  }

  .mhacks-mid-ft-list-para, .mhacks-mid-ft-list-two-para{
    font-size: 0.95em;
  }

  .mhacks-mid-mission-text{
    font-size: 2.5em;
  }

  .mhacks-mid-mission-content{
    font-size: 1.1em;
  }

  .mhacks-mid-mission-sec-bg{
    width: 760px;
    margin-top: -20%;
  }

  .mhacks-last-contact-bg{
    height: 75px;
  }

  .mhacks-last-contact-header{
    font-size: 2.2em;
  }
}

@media only screen and (max-width: 850px){
  .mhacks-top-header{
    font-size: 2.1em;
  }

  .mhacks-tn-right-item{
    margin-left: -18vw;
    margin-right: 18vw;
  }

  .mhacks-mid-header-business{
    padding-top: 4%;
  }

  .mhacks-mid-content{
    margin-left: 5%;
  }

  .mhacks-mid-mission-bg{
    height: 100px;
  }

  .mhacks-mid-mission-text{
    font-size: 2.4em;
  }

  .mhacks-mid-mission-content{
    font-size: 1.05em;
  }

  .mhacks-mid-mission-sec-bg{
    width: 720px;
    margin-top: -25%;
  }

  .mhacks-mid-team-header{
    font-size: 2.3em;
    margin-top: -40%;
  }

  .mhacks-mid-team-card{
    margin-top: -30%;
    margin-bottom: -40%;
  }

  .mhacks-footer-content{
    margin-top: -10%;
  }

  .mhacks-footer-content{
    margin-top: -14%;
  }
}

@media only screen and (max-width: 810px){
  .mhacks-tn-right-item{
    margin-left: -22vw;
    margin-right: 22vw;
  }

  .mhacks-mid-header, .mhacks-mid-header-business{
    font-size: 2.1em;
  }

  .mhacks-mid-header-business{
    padding-top: 3%;
  }

  .mhacks-mid-bg, .mhacks-mid-bg-business{
    height: 90px;
  }

  .mhacks-mid-content{
    margin-left: 8%;
  }

  .mhacks-mid-content-pic{
    height: 240px;
  }

  .mhacks-mid-mission-text{
    font-size: 2.2em;
  }

  .mhacks-mid-mission-content{
    font-size: 1em;
  }

  .mhacks-mid-mission-sec-bg{
    width: 660px;
    margin-top: -30%;
  }
}
/* ToDo => Fix Navbar items for 769 and below resolutions. */
@media only screen and (max-width: 769px){
  .mhacks-tn-left-logo a{
    padding-left: 3px;
    font-size: 1em;
  }

  .mhacks-tn-right-item a{
    font-size: 1em;
    margin-left: 2vw;
    margin-right: 2vw;
  }

  .mhacks-tn-right-item{
    margin-left: -2vw;
    margin-right: 6vw;
  }

  .mhacks-top-bg{
    height: 370px;
  }

  .mhacks-mid-content{
    margin-left: 10%;
  }

  .mhacks-mid-mission-text{
    font-size: 2em;
  }

  .mhacks-mid-mission-sec-bg{
    width: 600px;
  }

  .mhacks-last-contact-bg{
    height: 70px;
  }

  .mhacks-last-contact-header{
    font-size: 2em;
  }
}
@media screen and (max-width: 770px){
  .mhacks-tn-right-item{
    display: none;
  }
}
@media screen and (max-width: 750px){
  .mhacks-tn-right-item{
    display: none;
  }
  .mhacks-top-header{
    color: #f73589;
    margin-left: 50%;
    width: 409px;
    margin-top: -30%;
  }
  .mhacks-top-para{
    margin-left: 30vw;
    width: 307px;
    margin-top: -19%;
  }
  .mhacks-tp1{
    margin-left: -0.1vw;
  }
  .mhacks-top-btn{
    margin-left: 39vw;
  }
}
@media screen and (max-width: 761px){
  .mhacks-mid-team-card-other-pic{
    float: right;
  }
  .alan{
    margin-right: -50px;
  }
  .dani{
    margin-right: -78px;
  }
  .james{
    margin-right: -101px;
  }
  .kavi{
    margin-right: -118px;
  }
}
@media screen and (max-width: 750px){
  .mhacks-tn-right-item{
    display: none;
  }
  /*.contactus-section{
    background: url(../images/DesignContactUs.svg);
    background-repeat: no-repeat;
    background-size: cover;
    margin-left: -1%;
    background-position-x: 100%;
    height: 618px;
    margin-top: -7%;
  }*/
  .mhacks-last-contact-btn{
    width: 208%;
  }
  .mhacks-last-contact-textarea{
    width: 209%;
  }
  .mhacks-footer-content{
    display: none;
  }
  .mhacks-last-contact-input{
    width: 209%;
  }
  .mhacks-last-contact-header{
    padding-top: 13%;
    color: #000;
  }
  .mhacks-last-contact-input-header{
    color: #000;
  }
  .mhacks-last-contact-input-bg{
    display: none;
  }
  .mhacks-last-footer-bg{
    display: none;
  }
  .mhacks-mid-content{
    width: 290px;
  }
  .mhacks-mid-mission-content{
    width: 535px;
    margin-bottom: 320px;
  }
  .mhacks-mid-mission-text{
    padding-left: 9%;
    padding-top: 11%;
  }
  .mhacks-mid-ft-text{
    padding-right: 20%;
  }
  .mhacks-top-bg{
    display: none;
  }
  .students-section{
    display: grid;
    margin: 0 auto;
  }
  .mhacks-mid-content-business{
    margin-top: -79vw;
    width: 270px;
  }
  .business-pic{
    margin-top: 49vw;
  }
  .mhacks-mid-header{
    margin-left: 15%; 
  }
  .students-container{
    margin-left: 26%;
  }
  .business-section{
    display: grid;
    margin-left: 26%;
  }
  .mhacks-mid-header-business{
    margin-right: 10%;
  }
  .mhacks-mid-ft{
    background-image: none;
  }
  .mhacks-mid-ft-content{
    margin-left: -60%;
  }
  .mhacks-features-section{
    display: none;
  }
  .mhacks-mid-bg{
    background-image: none;
  }
  .mhacks-mid-bg-business{
    background-image: none;
  }
  .mhacks-mid-ft-content{
    background-image: none;
  }
  .mhacks-mid-mission-bg{
    background-image: none;
  }
  .mhacks-last-contact-bg{
    background-image: none;
  }
  .mhacks-mid-mission-sec-bg{
    display: none;
  }
}
/* ... */

